--- a/code-pen-projects/markdown/src/index.css
+++ b/code-pen-projects/markdown/src/index.css
@@ -9,14 +9,14 @@ body{
 }
 h1{
     
-    color: grey;
+    color: rgb(95, 93, 93);
     font-size: 35px;
 }
-input{
-   padding: 80px;
-   border-radius: 6%;
+textarea{
+   padding: 70px;
+   border-radius: 8%;
    background: black;
-   font-size: 25px;
+   font-size: 20px;
    
    
 }
