--- a/code-pen-projects/recipe/src/index.css
+++ b/code-pen-projects/recipe/src/index.css
@@ -1,6 +1,6 @@
 body{
-    background-color: black;
-    color: whitesmoke;
+    background-color: white;
+    color: black;
 }
 
 table {
@@ -13,6 +13,15 @@ table, th, td {
 
 }
 
-textarea{
+textarea{ 
     width:100%;
+    border-radius: 5px
+}
+h1{
+    white-space: nowrap;
+    text-align: horizontal
+}
+well{
+    /* box: 4px 3px; */
+    background-color: whitesmoke
 }
