--- a/code-pen-projects/recipe/src/index.css
+++ b/code-pen-projects/recipe/src/index.css
@@ -1,6 +1,7 @@
 body{
     background-color: white;
     color: black;
+    align: center;
 }
 
 table {
@@ -17,11 +18,19 @@ textarea{
     width:100%;
     border-radius: 5px
 }
-h1{
-    white-space: nowrap;
-    text-align: horizontal
+
+
+#displayButton{
+    width: 50%;
+    content: "A" !important;
+    display: block !important;
+    margin-bottom: 0.5em !important;
+    background-color:#aed6f1;
+    border-radius: 5px;
 }
-well{
-    /* box: 4px 3px; */
-    background-color: whitesmoke
+
+#addButton{
+    margin-bottom: 0.5em !important;
+   background-color: #a9cce3;
+   border-radius: 5px;    
 }
