--- a/code-pen-projects/recipe/src/index.css
+++ b/code-pen-projects/recipe/src/index.css
@@ -32,6 +32,7 @@ textarea{
     display: block !important;
     margin-bottom: 0.5em !important;
     background-color:#c04535cc;
+    color:#080606f8;
     border-radius: 5px;
     font-size: 22px;
     font-family: Italic ;
@@ -43,5 +44,9 @@ textarea{
    border-radius: 5px;   
    font-size: 21px;
    font-family: Italic ; 
-   
+   color:#080606f8;
+}
+
+#displayIngredients{
+    font-weight: bold;
 }
