--- a/code-pen-projects/game-of-life/src/index.css
+++ b/code-pen-projects/game-of-life/src/index.css
@@ -1,11 +1,30 @@
 .grid{
     display: grid;
-   grid-template-columns: 60px 60px 60px 60px 60px ;
-   grid-template-rows: 60px 60px 60px 60px 60px ;
+   grid-template-columns: 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px ;
+   grid-template-rows: 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px;
+   border-radius: 10px;
+   
 }
 #alive{
-    background-color: black;
+    background-color: rgb(211, 56, 9);
+    color: white;
 }
 #dead{
-    background-color: white;
+    background-color: rgb(236, 183, 6);
+    color: white;
+}
+
+#clear{
+background: rgb(241, 27, 27);
+}
+body{
+    background: whitesmoke;
+    color: black;
+}
+#buttons{
+   background-color: #4CAF50; 
+   border-radius: 10px;
+   color: white;
+   padding: 20px;
+   text-align: center;
 }
