--- a/code-pen-projects/game-of-life/src/index.css
+++ b/code-pen-projects/game-of-life/src/index.css
@@ -1,13 +1,17 @@
 
 .grid{
     display: grid;
+    border-radius: 5%
+    }
+    h3{
+        color:rgb(30, 190, 218);
     }
     #alive{
-    background-color: rgb(211, 56, 9);
+    background-color: rgb(30, 190, 218);
     color: white;
     }
     #dead{
-    background-color: rgb(236, 183, 6);
+    background-color: rgb(34, 36, 36);
     color: white;
     }
     #start{
@@ -20,18 +24,12 @@
     color: rgb(241, 27, 27);
     }
     body{
-    background: whitesmoke;
-    color: black;
+    background: rgb(34, 36, 36);
+    color: rgb(226, 221, 221);
     }
-    /* #buttons{
-    background-color: #4CAF50; 
-    border-radius: 10px;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    } */
     .cell{
     width:20px;
     height:20px;
     }
+  
     
