--- a/code-pen-projects/roguelike-dungeon-crawler-game/src/App.css
+++ b/code-pen-projects/roguelike-dungeon-crawler-game/src/App.css
@@ -6,18 +6,18 @@
 }
 
 header {
-    top: 0 px;  
+    top: 0 px;
     width: 100%;
     height: 100px;
-    text-align: center; 
-    font-size:20px;
+    text-align: center;
+    font-size: 20px;
     box-shadow: 0px 6px 20px 0px;
     color: orange;
     text-shadow: 1px 1px;
     font-family: courier;
 }
 
-.message { 
+.message {
     display: table;
     margin: .5em auto;
     margin-top: 0.5em;
@@ -61,7 +61,36 @@ header {
     background-color: rgb(80, 197, 25);
     background: url('icons/jam.png');
     background-size: cover;
-    /* margin-right: 1em; */
+    margin-right: 1em;
+}
+#bat{
+    display: inline-block;
+    width: 2.5em;
+    height: 2.5em;
+    background-color: rgb(80, 197, 25);
+    background: url('icons/stoned-bat.png');
+    background-size: cover;
+    margin-right: 1em;
+}
+
+#syringe {
+    display: inline-block;
+    width: 2.5em;
+    height: 2.5em;
+    background-color: rgb(80, 197, 25);
+    background: url('icons/health.png');
+    background-size: cover;
+    margin-right: 1em;
+}
+
+#jam {
+    display: inline-block;
+    width: 2.5em;
+    height: 2.5em;
+    background-color: rgb(80, 197, 25);
+    background: url('icons/jam.png');
+    background-size: cover;
+    margin-right: 1em;
 }
 
 .stage {
@@ -80,4 +109,3 @@ header {
 .pass {
     background-color: rgb(15, 15, 14)
 }
-
