fixed all the bugs

--- a/code-pen-projects/roguelike-dungeon-crawler-game/src/App.css
+++ b/code-pen-projects/roguelike-dungeon-crawler-game/src/App.css
@@ -59,7 +59,7 @@ header {
     background-size: cover;
     margin-right: 1em;    
 }
-#bat{
+#crab{
     display: inline-block;
     width: 2.5em;
     height: 2.5em;
@@ -99,7 +99,7 @@ header {
     
 }
 
-#fist{
+#gun{
     display: inline-block;
     width: 2.5em;
     height: 2.5em;
