--- a/code-pen-projects/markdown/src/index.css
+++ b/code-pen-projects/markdown/src/index.css
@@ -1,29 +1,41 @@
-
-
-body{
+body {
+    color: whitesmoke;
     text-align: center;
     margin: 0%;
     background-color: black;
-    color: whitesmoke;
-
 }
-h1{
-    
-    color: rgb(95, 93, 93);
+
+.header {
+    margin-top: 2%;
+    color: #ccc;
     font-size: 35px;
 }
-textarea{
-   padding: 70px;
-   border-radius: 8%;
-   background: black;
-   font-size: 20px;
-   
+
+textarea {
+    border: 4px solid;
+    border-color: #ccc;
+    border-radius: 4px;
+    margin-top: 5%;
+    width: 60%;
+    height: 160px;
+    background: white;
+    font-size: 18px;
 }
-footer{
-    color:rgb(195, 222, 233);
-    position:absolute;
-   bottom:0;
-   width:100%;
-   height:50px;   /* Height of the footer */
-   
+
+footer {
+    color: rgb(195, 222, 233);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: black;
+}
+
+.container {
+    height: 100px;
+    text-align: center;
+    width: 50%;
+    color: whitesmoke;
+    padding-left: 25%;
+    margin-bottom: 100%;
 }
