--- a/code-pen-projects/roguelike-dungeon-crawler-game/src/App.css
+++ b/code-pen-projects/roguelike-dungeon-crawler-game/src/App.css
@@ -13,16 +13,20 @@
 }
 
 header {
-    top: 0 px;
+    top: 0px;
     width: 100%;
     height: 100px;
     text-align: center;
     font-size: 20px;
     box-shadow: 0px 6px 20px 0px;
     color: orange;
-    text-shadow: 1px 1px;
+    white-space: nowrap;
     font-family: courier;
         
+}
+
+.elementsInsideGrid > span{
+    margin-right:22px;    
 }
 
 .message {
@@ -55,7 +59,7 @@ header {
     display: inline-block;
     width: 2.5em;
     height: 2.5em;
-    background: url('icons/octopus.png') repeat 0 0;
+    background: url('icons/octopus.png');
     background-size: cover;
     margin-right: 1em;    
 }
@@ -179,3 +183,114 @@ button{
     color: orange;
     font-size: 15px;
 }
+
+@media only screen and (max-width:850px) {
+    /* For tablets: */
+    .grid {
+      width: 80%;
+      padding: 0;
+    }
+    .header {
+      width: 50%;
+    }
+  }
+  @media only screen and (max-width:550px) {
+    /* For mobile phones: */
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(12, 23px);
+        grid-template-rows: repeat(12, 23px);
+        justify-content: center;
+        position:relative;
+    }
+    #playerBlock {
+        display: inline-block;
+        width: 1.5em;
+        height: 1.5em;
+        background: url('icons/player.png')repeat 0 0;
+        background-size: cover;
+    }
+    .grid > span > #strike{
+        display: inline-block;
+        width: 1.5em;
+        height: 1.5em;
+        background-color: rgb(245, 83, 110);
+        background: url('icons/strike.png');
+        background-size: cover;
+        margin-right: 1em;
+        
+    }
+    #octopus{
+        display: inline-block;
+        width: 1.5em;
+        height: 1.5em;
+        background: url('icons/octopus.png');
+        background-size: cover;
+        margin-right: 1em;    
+    }
+
+    #crab{
+        display: inline-block;
+        width: 1.5em;
+        height: 1.5em;
+        background: url('icons/crab.png');
+        background-size: cover;
+        margin-right: 1em;    
+    }
+
+    header > .heading {
+       font-size: 8px;            
+    }
+    header{
+        width: 90%;
+        height: 60%;
+        margin:2%;
+    }
+    .message{
+        margin-top:30px;
+        display: grid;
+        grid-template-columns: repeat(13, 23px);
+        justify-content: center;
+    }
+    #jason{
+        display: inline-block;
+        width: 1.5em;
+        height: 1.5em;
+        background-color: rgb(80, 197, 25);
+        background: url('icons/jason.png');
+        background-size: cover;
+        margin-right: 1em;
+    }
+    .stage {
+        display: inline-block;
+        width: 1.5em;
+        height: 1.5em;
+        background-color: rgb(80, 197, 25);
+        background: url('icons/next-level.png');
+        background-size: cover;
+    }
+    .elementsInsideGrid{
+        font-size: 9px;
+    }
+    .grid > span > #jam{
+        display: inline-block;
+        width: 100%;
+        background-color: rgb(80, 197, 25);
+        background: url('icons/jam.png');
+        background-size: cover;
+        margin-right: 1em;
+    }
+  }
+
+  @media only screen and (max-width:550px){
+    .healthBlock, .message,.weaponBlock,.enemyBlock, .header{
+        font-size: 8px;
+    }
+  }
+
+ 
+
+  @media only screen and (max-width:550px){
+
+  
+  }
